cmake_minimum_required(VERSION 3.31)

project(calcu LANGUAGES CXX)

set(CMAKE_CXX_STANDDARD 14)
set(CMAKE_CXX_STANDDARD_REQUIRED True)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_CACHEFILE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(calcu ./src/main.cpp)
